fix: border causing layout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -4,7 +4,8 @@ select {
   appearance: none;
   width: 100%;
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid var(--stroke-default);
+  outline: 1px solid var(--stroke-default);
   padding: .75rem 1rem;
 
   font: var(--text);
@@ -22,7 +23,6 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
   outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-highlight);
   outline-offset: .1px;
 }
 
